--- a/conf/app.ini
+++ b/conf/app.ini
@@ -1,5 +1,4 @@
 app_name   = gcache
-# possible values: DEBUG, INFO, WARNING, ERROR, FATAL
 
 [mysql]
 ip       = 192.168.0.7
@@ -7,6 +6,14 @@ port     = 3306
 user     = root
 password = 1234
 database = cache
+
+
+[node3]
+ip  =192.168.0.7:8080
+[node1]
+ip  =192。168.0.38:8080
+[node0]
+ip  = 192.168.0.49:8080
 
 
 
